--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -131,8 +131,8 @@
     <ClCompile Include="src\Entities\AnimatedEntity.cpp" />
     <ClCompile Include="src\CollisionBox.cpp" />
     <ClCompile Include="src\Entities\Entity.cpp" />
-    <ClCompile Include="src\Entities\Tile.cpp" />
     <ClCompile Include="src\Game.cpp" />
+    <ClCompile Include="src\Handlers\LevelHandler.cpp" />
     <ClCompile Include="src\KeyboardState.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\Entities\Player.cpp" />
@@ -144,8 +144,8 @@
     <ClInclude Include="src\Entities\AnimatedEntity.h" />
     <ClInclude Include="src\CollisionBox.h" />
     <ClInclude Include="src\Entities\Entity.h" />
-    <ClInclude Include="src\Entities\Tile.h" />
     <ClInclude Include="src\Game.h" />
+    <ClInclude Include="src\Handlers\LevelHandler.h" />
     <ClInclude Include="src\Lighting\Light.h" />
     <ClInclude Include="src\KeyboardState.h" />
     <ClInclude Include="src\Lighting\LightQueue.h" />
