Collision boxes can be created from tilefilenice

--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -127,10 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\CollisionHandler.cpp" />
+    <ClCompile Include="src\Collision\CollisionHandler.cpp" />
     <ClCompile Include="src\Entities\AnimatedEntity.cpp" />
-    <ClCompile Include="src\CollisionBox.cpp" />
+    <ClCompile Include="src\Collision\CollisionBox.cpp" />
     <ClCompile Include="src\Entities\Entity.cpp" />
+    <ClCompile Include="src\Entities\Terrain.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\Handlers\LevelHandler.cpp" />
     <ClCompile Include="src\KeyboardState.cpp" />
@@ -139,11 +140,12 @@
     <ClCompile Include="src\ShaderHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\CollisionHandler.h" />
+    <ClInclude Include="src\Collision\CollisionHandler.h" />
     <ClInclude Include="src\Definitions.h" />
     <ClInclude Include="src\Entities\AnimatedEntity.h" />
-    <ClInclude Include="src\CollisionBox.h" />
+    <ClInclude Include="src\Collision\CollisionBox.h" />
     <ClInclude Include="src\Entities\Entity.h" />
+    <ClInclude Include="src\Entities\Terrain.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\Handlers\LevelHandler.h" />
     <ClInclude Include="src\Lighting\Light.h" />
