Shadows works a little

--- a/KanskeKulSpel/imgui.ini
+++ b/KanskeKulSpel/imgui.ini
@@ -9,7 +9,27 @@ Size=321,184
 Collapsed=0
 
 [Window][turbotest]
-Pos=817,186
+Pos=1113,393
 Size=300,300
+Collapsed=0
+
+[Window][Pröööf]
+Pos=1409,101
+Size=234,204
+Collapsed=0
+
+[Window][Profolio]
+Pos=1288,65
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec]
+Pos=1137,103
+Size=500,500
+Collapsed=0
+
+[Window][LightData]
+Pos=904,288
+Size=580,181
 Collapsed=0
 
