Might be it for shadows oh boyo

--- a/KanskeKulSpel/imgui.ini
+++ b/KanskeKulSpel/imgui.ini
@@ -33,3 +33,213 @@ Pos=1123,525
 Size=580,181
 Collapsed=0
 
+[Window][Profolio, MicroSec! FPS: inf]
+Pos=1069,227
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 19.607843]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 1.213592]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 9.433962]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 76.923080]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 90.909088]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 100.000000]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 166.666672]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 111.111115]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 125.000000]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 142.857147]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 37.037037]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 17.543859]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 1.186240]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 9.615385]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 200.000000]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 40.000000]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 18.518518]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 1.197605]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 9.523809]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 34.482758]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 16.129032]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 1.189061]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 31.250000]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 17.241379]
+Pos=60,60
+Size=5000,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 1.095290]
+Pos=60,60
+Size=5000,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 33.333332]
+Pos=60,60
+Size=5000,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 15.151515]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 1.140251]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 12.345679]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 50.000000]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 66.666664]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 45.454544]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 71.428574]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 83.333336]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 62.500000]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 7.462687]
+Pos=60,60
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 14.925373]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 0.269978]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 58.823528]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec! FPS: 9.009009]
+Pos=400,200
+Size=500,500
+Collapsed=0
+
+[Window][Profolio, MicroSec!]
+Pos=1148,190
+Size=500,500
+Collapsed=0
+
