Time to optimize stuff :(

--- a/KanskeKulSpel/imgui.ini
+++ b/KanskeKulSpel/imgui.ini
@@ -239,7 +239,12 @@ Size=500,500
 Collapsed=0
 
 [Window][Profolio, MicroSec!]
-Pos=1148,190
+Pos=1259,475
+Size=500,486
+Collapsed=0
+
+[Window][Profolio, MilSec!]
+Pos=586,91
 Size=500,500
 Collapsed=0
 
