--- a/KanskeKulSpel/KanskeKulSpel.vcxproj.filters
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClInclude Include="src\Handlers\TextureHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Particles\ParticleEmitter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Shaders\GaussianVert.frag" />
