--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\Entities\Player.cpp" />
     <ClCompile Include="src\Handlers\ShaderHandler.cpp" />
+    <ClCompile Include="src\Misc\MouseState.cpp" />
     <ClCompile Include="src\Particles\Emitter.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -176,8 +177,10 @@
     <ClInclude Include="src\Lighting\LightQueue.h" />
     <ClInclude Include="src\Entities\Player.h" />
     <ClInclude Include="src\Handlers\ShaderHandler.h" />
+    <ClInclude Include="src\Misc\MouseState.h" />
     <ClInclude Include="src\Misc\Profiler.h" />
     <ClInclude Include="src\Misc\UnorderedErase.h" />
+    <ClInclude Include="src\Misc\VectorFunctions.h" />
     <ClInclude Include="src\Particles\Emitter.h" />
   </ItemGroup>
   <ItemGroup>
