--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="src\Entities\AnimatedEntity.cpp" />
     <ClCompile Include="src\Collision\CollisionBox.cpp" />
     <ClCompile Include="src\Entities\Entity.cpp" />
+    <ClCompile Include="src\Entities\MovingEntity.cpp" />
     <ClCompile Include="src\Entities\Terrain.cpp" />
     <ClCompile Include="src\Entities\Throwable.cpp" />
     <ClCompile Include="src\Game.cpp" />
@@ -159,6 +160,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Collision\CollisionHandler.h" />
+    <ClInclude Include="src\Entities\MovingEntity.h" />
     <ClInclude Include="src\Entities\Throwable.h" />
     <ClInclude Include="src\Handlers\ParticleHandler.h" />
     <ClInclude Include="src\Handlers\ProjectileHandler.h" />
